add_library(die-tk
        ../die-tk.h
        components/Image.h
        components/ImageParams.h
        components/ImageCanvas.cpp
        components/ImageCanvas.h
        components/NullImage.cpp
        components/NullImage.h
        controls/Image.h
        controls/PaintBox.h
        objects/Color.h
        objects/Dimension.h
        objects/Dimension_impl.h
        objects/Drawing.h
        objects/Point.h
        objects/Rect.h
        portable/Control.hpp
        portable/Surface.hpp
        portable/Window.hpp
        util/optional.h
        util/optional.hpp
        util/ScopedHandle.h
        util/singleton.h
        Application.h
        Callbacks.h
        CallbackUtils.h
        Canvas.h
        Control.h
        ControlParams.cpp
        ControlParams.h
        Event.h
        log.h
        NativeString.h
        NullCanvas.cpp
        NullCanvas.h
        Surface.cpp
        Surface.h
        TextParams.h
        trace.h
        Window.h
        WindowObjects.h
        WindowParams.h
        custom/CustomControl.cpp custom/CustomControl.h custom/Label.cpp custom/Label.h custom/CustomControlImpl.cpp custom/CustomControlImpl.h custom/LabelImpl.cpp custom/LabelImpl.h)

target_link_libraries(die-tk die-tk-impl)
